@startuml
' PlantUML class diagram for key classes in SparkUfsPdt
' Generated by GitHub Copilot

skinparam classAttributeIconSize 0

package "Core UI / Dialog" {
  class CSparkUfsPdtDlg {
	+static constexpr int UI_THREAD_COUNT
	-std::array<PortState, UI_THREAD_COUNT> m_ports
	-std::array<PortState, UI_THREAD_COUNT> m_pendingStates
	-std::bitset m_pendingStateMask
	-int m_totalCount
	-int m_passCount
	-int m_failCount
	-atomic<int> m_activeTaskCount
	+RunPdtTask(portIndex, allocatedSn)
	+OnTaskProgress(WPARAM, LPARAM)
	+EnqueuePendingPortState(portIndex, delta)
	+UpdatePortUI(portIndex, newState)
	+UpdateStatusBarText()
	+IncrementActiveTasks(n)
	+DecrementActiveTasks(n)
  }

  class PortState {
	+bool completed
	+bool failed
	+int progress
	+CStringW serial
	+CString statusText
	+CString drive
	+CString startTime
	+CString version3350
	+CString mid
	+CString oid
	+CString fwVersion
  }
}

package "Adapter / Notifier" {
  interface IUiNotifier {
	+PostTaskProgress(portIndex, progress, result, status)
	+PostTaskStatus(portIndex, result, status)
  }

  class DialogAdapter {
	-CSparkUfsPdtDlg* dlg_
	+PostTaskProgress(...)
	+PostTaskStatus(...)
	+PostUiCommand(cmd, portIndex, value, text)
	+FormatFailureStatus(stage, errCode)
  }
}

package "Event Infrastructure" {
  class ProgressEvent {
	+int portIndex
	+enum EventType { Progress, StatusOnly, Final }
	+EventType type
	+int progress
	+int result
	+std::string status
  }

  class UIEvent {
	+UICommand cmd
	+int portIndex
	+int value
	+std::string text
  }

  enum UICommand {
	None
	DecrementActiveTasks
	IncrementActiveTasks
	UpdateStatusBar
	SetScanButtonEnabled
	IncrementPassCount
	IncrementFailCount
  }

  class EventBus {
	-std::mutex mutex_
	-std::unordered_map<HWND, QueueEntry> map_
	+static Instance()
	+Publish(HWND, ProgressEvent)
	+PublishUI(HWND, UIEvent)
	+ConsumeAll(HWND) : vector<ProgressEvent>
	+ConsumeAllUI(HWND) : vector<UIEvent>
	+Unregister(HWND)
  }
}

package "State / Worker" {
  class CImpState {
	-ISettingsProvider* settings_
	-ILogger* logger_
	-IUiNotifier* notifier_
	+PowerOffStage(...)
	+RebootStage(...)
	+Other stage methods...
  }
}

' relationships
DialogAdapter ..|> IUiNotifier
DialogAdapter --> CSparkUfsPdtDlg : holds
CSparkUfsPdtDlg --> EventBus : consumes
DialogAdapter --> EventBus : publishes
CImpState --> IUiNotifier : uses
EventBus ..> ProgressEvent
EventBus ..> UIEvent
CSparkUfsPdtDlg o-- PortState
CSparkUfsPdtDlg ..> DialogAdapter : creates/uses
CImpState ..> DialogAdapter : constructed with

@enduml
